--- a/plugins.toml
+++ b/plugins.toml
@@ -77,14 +77,30 @@ repo = 'mattn/vim-lsp-settings'
 [[plugins]]
 repo = 'Shougo/ddu.vim'
 hook_add = '''
+call ddu#custom#alias('default', 'column', 'icon_filename_for_ff', 'icon_filename')
 call ddu#custom#patch_global({
 	\ 'ui': 'filer',
 	\ 'sources': [{'name': 'file'}],
 	\ 'sourceOptions': {
-	\   '_': {
-	\     'columns': ['icon_filename'],
-	\   },
-	\ },
+	\		'file': {
+	\			'columns': ['icon_filename'],
+	\		},
+	\		'file_rec': {
+	\			'columns': ['icon_filename_for_ff'],
+	\		},
+	\	},
+	\	'columnParams': {
+	\		'icon_filename': {
+	\			'defaultIcon': {
+	\				'icon': '',
+	\			},
+	\		},
+	\		'icon_filename_for_ff': {
+	\			'defaultIcon': '',
+	\			'padding': 0,
+	\			'pathDisplayOption': 'relative',
+	\		},
+	\	},
 	\ 'uiParams': {
 	\		'filer': {
 	\			'split': 'vertical',
