--- a/plugins.toml
+++ b/plugins.toml
@@ -82,6 +82,11 @@ call ddu#custom#patch_global({
 	\ 'ui': 'filer',
 	\ 'sources': [{'name': 'file'}],
 	\ 'sourceOptions': {
+	\		'_': {
+	\			'sorters': [
+	\				'sorter_alpha',
+	\			],
+	\		},
 	\		'file': {
 	\			'columns': ['icon_filename'],
 	\		},
@@ -164,3 +169,6 @@ repo = 'Shougo/ddu-ui-ff'
 
 [[plugins]]
 repo = 'ryota2357/ddu-column-icon_filename'
+
+[[plugins]]
+repo = 'Shougo/ddu-filter-sorter_alpha'
